# C-Flow

./: .clang-format  .gitignore  CMakeLists.txt  Doxygen.config  README.md  main.cpp  run-all-fromat.sh  test.patch
cmake/: cflowConfig.cmake.in
doc/: vtf通用性讨论.md
doc/doxgen-doc/: CMakeLists_8txt.html  FrameRequest_8hpp.html  FrameRequest_8hpp__incl.map  FrameRequest_8hpp__incl.md5  FrameRequest_8hpp_source.html  IDGenerator_8hpp.html  IDGenerator_8hpp__dep__incl.md5  annotated.html  blocking__queue_8hpp.html  blocking__queue_8hpp__dep__incl.map  blocking__queue_8hpp__dep__incl.md5  build_2CMakeFiles_23_816_83_2CompilerIdC_2CMakeCCompilerId_8c.html  build_2CMakeFiles_2testBlockingQueue_8dir_2link_8txt.html  build_2CMakeFiles_2testPipeline_8dir_2link_8txt.html  build_2CMakeFiles_2testThreadLoop_8dir_2link_8txt.html  classFrameRequest-members.html  classFrameRequest.html  classFrameRequest__coll__graph.map  classFrameRequest__coll__graph.md5  classMypipeData.html  classMypipeData__inherit__graph.md5  classdnnfacedetect-members.html  classdnnfacedetect__coll__graph.map  classstd_1_1queue_3_01std_1_1shared__ptr_3_01Item_01_4_01_4.html  classvtf_1_1BlockingQueue-members.html  classvtf_1_1BlockingQueue__coll__graph.map  classvtf_1_1DAGNode__coll__graph.map  classvtf_1_1DAGNode__coll__graph.md5  classvtf_1_1Dispatcher__coll__graph.map  classvtf_1_1Log.html  classvtf_1_1Log__coll__graph.md5  classvtf_1_1Notifier-members.html  classvtf_1_1Notifier_1_1NotifierBuilder.html  classvtf_1_1Notifier_1_1NotifierBuilder__coll__graph.md5  classvtf_1_1Notifier__inherit__graph.md5  classvtf_1_1ThreadLoop-members.html  classvtf_1_1ThreadLoop.html  classvtf_1_1ThreadPool-members.html  classvtf_1_1ThreadPool.html  classvtf_1_1pipeline_1_1Data-members.html  (+162 more)
doc/doxygen/: FrameRequest_8hpp.html  FrameRequest_8hpp__dep__incl.map  FrameRequest_8hpp__dep__incl.md5  FrameRequest_8hpp__incl.map  FrameRequest_8hpp__incl.md5  FrameRequest_8hpp_source.html  IDGenerator_8hpp.html  IDGenerator_8hpp__dep__incl.map  IDGenerator_8hpp__dep__incl.md5  IDGenerator_8hpp__incl.md5  IDGenerator_8hpp_source.html  blockingQueueTest_8cpp.html  blockingQueueTest_8cpp__incl.map  blockingQueueTest_8cpp__incl.md5  blocking__queue_8hpp.html  blocking__queue_8hpp__dep__incl.map  blocking__queue_8hpp__dep__incl.md5  blocking__queue_8hpp_source.html  build_2CMakeFiles_23_816_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  build_2CMakeFiles_2testPipelineWithOpenCV_8dir_2link_8txt.html  build_2CMakeFiles_2testTaskFlowCtl_8dir_2link_8txt.html  build_2CMakeFiles_2testTaskThreadPool_8dir_2link_8txt.html  build_2CMakeFiles_2testTask_8dir_2link_8txt.html  build_2CMakeFiles_2testThreadPool_8dir_2link_8txt.html  classMypipeData-members.html  classMypipeData__coll__graph.map  classdnnfacedetect__coll__graph.md5  classes.html  classint__coll__graph.md5  classstd_1_1queue_3_01std_1_1shared__ptr_3_01Item_01_4_01_4__coll__graph.map  classstd_1_1queue_3_01std_1_1shared__ptr_3_01Item_01_4_01_4__coll__graph.md5  classvtf_1_1BlockingQueue__coll__graph.md5  classvtf_1_1DAG-members.html  classvtf_1_1DAG.html  classvtf_1_1DAGNode-members.html  classvtf_1_1DAGNode.html  classvtf_1_1DAGNode__inherit__graph.map  classvtf_1_1DAGNode__inherit__graph.md5  classvtf_1_1DAG__coll__graph.md5  classvtf_1_1Dispatcher-members.html  (+258 more)
doc/doxygen-doc/: FrameRequest_8hpp.html  FrameRequest_8hpp__incl.map  FrameRequest_8hpp__incl.md5  FrameRequest_8hpp_source.html  IDGenerator_8hpp__dep__incl.map  IDGenerator_8hpp__incl.map  blocking__queue_8hpp.html  blocking__queue_8hpp__dep__incl.map  blocking__queue_8hpp__dep__incl.md5  blocking__queue_8hpp__incl.map  blocking__queue_8hpp__incl.md5  build_2CMakeFiles_2testDag_8dir_2link_8txt.html  classFrameRequest-members.html  classFrameRequest.html  classFrameRequest__inherit__graph.map  classFrameRequest__inherit__graph.md5  classMypipeData-members.html  classMypipeData.html  classMypipeData__coll__graph.md5  classMypipeData__inherit__graph.map  classdnnfacedetect.html  classint.html  classvtf_1_1BlockingQueue.html  classvtf_1_1DAGNode.html  classvtf_1_1DAGNode__inherit__graph.map  classvtf_1_1DAGNode__inherit__graph.md5  classvtf_1_1DAG__coll__graph.map  classvtf_1_1Dispatcher.html  classvtf_1_1Notifier-members.html  classvtf_1_1Notifier.html  classvtf_1_1Notifier_1_1NotifierBuilder-members.html  classvtf_1_1Notifier_1_1NotifierBuilder.html  classvtf_1_1Notifier_1_1NotifierBuilder__coll__graph.map  classvtf_1_1Notifier_1_1NotifierBuilder__coll__graph.md5  classvtf_1_1Notifier__coll__graph.map  classvtf_1_1Notifier__inherit__graph.md5  classvtf_1_1ThreadLoop.html  classvtf_1_1ThreadLoop__inherit__graph.map  classvtf_1_1ThreadLoop__inherit__graph.md5  classvtf_1_1ThreadPool__coll__graph.map  (+224 more)
sample/: CMakeLists.txt
sample/opencv/: FrameRequest.hpp  baseConfig.hpp  configTable.hpp  faceDected.hpp  preview.cpp  resultProcess.hpp  watermark.hpp
src/: .clang-format
src/common/: CMakeLists.txt  cflow_commonConfig.cmake.in
src/core/: Dag.hpp  blocking_queue.hpp  dag.hpp  data.hpp  dispatcher.hpp  flowctl.hpp  log.hpp  notifier.hpp  scheduler.hpp  task.hpp  taskflowctl.hpp  taskthreadPool.hpp  threadLoop.hpp  threadPool.hpp  type.hpp  utils.hpp
src/pipeline/: CMakeLists.txt  cflow_pipelineConfig.cmake.in
src/task/: CMakeLists.txt  cflow_taskConfig.cmake.in
src/task/include/: task_flow_ctl.h  tftask.h  type.h
src/task/src/: task_flow_ctl.cpp  tftask.cpp
src/test/: blockingQueueTest  blockingQueueTest.cpp  dag  dag.cpp  dagTest.cpp  faceDected.hpp  task  task.cpp  taskFlowCtlTest  taskFlowCtlTest.cpp  taskTest.cpp  taskThreadPoolTest  taskThreadPoolTest.cpp  testPipeline.cpp  testPipelineWithOpenCV.cpp  threadLoopTest.cpp  threadPoolTest.cpp  threadPool_test  threadPool_test.cpp
test/: CMakeLists.txt  blockingQueueTest.cpp  dagTest.cpp  taskFlowCtlTest.cpp  taskTest.cpp  taskThreadPoolTest.cpp  testBuffeManagerFlow.cpp  testPipeline.cpp  testScheduler.cpp  threadLoopTest.cpp  threadPoolTest.cpp
test/unittest/: testBufferManager.cpp  testBufferManagerFactory.cpp  testRingQueue.cpp  testUtils.h  testUtils.hpp
(+303 files in other folders)
